--- a/Hackathon_HoltWinter.ipynb
+++ b/Hackathon_HoltWinter.ipynb
@@ -371,28 +371,6 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NotImplementedError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-7-00c1d89adf7e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mscore\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel_fit\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mparams\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\statsmodels\\base\\model.py\u001b[0m in \u001b[0;36mscore\u001b[1;34m(self, params)\u001b[0m\n\u001b[0;32m    281\u001b[0m             \u001b[0mThe\u001b[0m \u001b[0mscore\u001b[0m \u001b[0mvector\u001b[0m \u001b[0mevaluated\u001b[0m \u001b[0mat\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mparameters\u001b[0m\u001b[1;33m.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    282\u001b[0m         \"\"\"\n\u001b[1;32m--> 283\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mNotImplementedError\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    284\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    285\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0minformation\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNotImplementedError\u001b[0m: "
-     ]
-    }
-   ],
-   "source": [
-    "model.score(model_fit.params)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
      "data": {
       "text/html": [
        "<table class=\"simpletable\">\n",
@@ -413,10 +391,10 @@
        "  <th>Seasonal:</th>               <td>Additive</td>       <th>  AICC               </th>      <td>380.780</td>    \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Seasonal Periods:</th>           <td>7</td>          <th>  Date:              </th> <td>Thu, 04 Jun 2020</td>\n",
+       "  <th>Seasonal Periods:</th>           <td>7</td>          <th>  Date:              </th> <td>Sat, 18 Jul 2020</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Box-Cox:</th>                  <td>False</td>        <th>  Time:              </th>     <td>18:57:18</td>    \n",
+       "  <th>Box-Cox:</th>                  <td>False</td>        <th>  Time:              </th>     <td>16:23:17</td>    \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>Box-Cox Coeff.:</th>           <td>None</td>         <th>                     </th>         <td> </td>       \n",
@@ -468,8 +446,8 @@
        "Optimized:                         True   AIC                            370.626\n",
        "Trend:                             None   BIC                            385.364\n",
        "Seasonal:                      Additive   AICC                           380.780\n",
-       "Seasonal Periods:                     7   Date:                 Thu, 04 Jun 2020\n",
-       "Box-Cox:                          False   Time:                         18:57:18\n",
+       "Seasonal Periods:                     7   Date:                 Sat, 18 Jul 2020\n",
+       "Box-Cox:                          False   Time:                         16:23:17\n",
        "Box-Cox Coeff.:                    None                                         \n",
        "=================================================================================\n",
        "                          coeff                 code              optimized      \n",
@@ -530,16 +508,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2893ac40dc8>]"
+       "[<matplotlib.lines.Line2D at 0x24a396b8d08>]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -562,16 +540,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2893b2353c8>]"
+       "[<matplotlib.lines.Line2D at 0x24a39733588>]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -594,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
